app/fireeth_k8s/substreams-tier1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: substreams-tier1
  labels:
    app: substreams-tier1
  annotations:
    prometheus.io/scrape: "true"
spec:
  selector:
    app: substreams-tier1
  ports:
    - name: grpc
      port: 9000
      protocol: TCP
      targetPort: grpc
    - name: prom
      port: 9102
      protocol: TCP
      targetPort: prom
